[package]
name = "matrix_rhal"
version = "0.0.6"
authors = ["Carlos Chacin"]
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/matrix_rhal/"
keywords = ["raspberry-pi", "matrix-creator", "matrix-voice", "matrix-labs"]
repository = "https://github.com/matrix-io/matrix-rhal"
exclude = ["Makefile"]
description = "The Rust implementation of MATRIX HAL."
license = "GPL-3.0"

[features]
default = ["std"]
std = ["nix"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
failure = "0.1.7"
heapless = "0.5.3"
nix = {version = "0.16.1", optional = true}
