[package]
name = "matrix_rhal"
version = "0.0.6"
authors = ["Carlos Chacin"]
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/matrix_rhal/"
keywords = ["raspberry-pi", "matrix-creator", "matrix-voice", "matrix-labs"]
repository = "https://github.com/matrix-io/matrix-rhal"
exclude = ["Makefile"]
description = "The Rust implementation of MATRIX HAL."
license = "GPL-3.0"

[lib]
crate-type = ["lib"]

# TODO: Once this ends up in stable: https://github.com/rust-lang/cargo/issues/1197
# When targeting ESP32 we can disable "std" by default
[features]
default = ["std"]
std = ["nix", "failure"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
failure = {version = "0.1.7", optional = true}
heapless = "0.5.3"
nix = {version = "0.16.1", optional = true}

# Dependencies for Matrix Voice w/ ESP32
[target.'cfg(target_arch = "xtensa")'.dependencies]
cty = {version = "0.2"}
failure = {version = "0.1.7", default-features = false, features = ["derive"]}
esp-idf-sys = "0.1.2"
# TODO: setting #[global_allocator] requires #[alloc_error_handler] which requires nightly
#esp-idf-alloc = "0.1.1"
#packed_struct = {version = "0.3", default-features = false}
#packed_struct_codegen = {version = "0.3", default-features = false}