[package]
name = "esp32_everloop"
version = "0.1.0"
authors = ["jeikabu <jeikabu@users.noreply.github.com>"]
edition = "2018"

[dependencies]
matrix_rhal = {version = "0.0.6", path = "../../", default-features = false}
cty = "0.2"
esp-idf-sys = "0.1.2"

[build-dependencies]
esp_idf_build = {version = "0.1", path = "../../esp_idf_build"}
